--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "type-check": "vue-tsc --build"
   },
   "dependencies": {
+    "embla-carousel-vue": "^8.6.0",
     "gsap": "^3.14.2",
     "lenis": "^1.3.17",
     "three": "^0.182.0",
